# ok-asssitance-trade-advice

./: README.md  pyproject.toml  signal_engine.py  signal_skill.md
.github/workflows/: test.yml
engine/: fetcher.py  indicators.py  models.py  scanner.py  signals.py
execution/: README.md  __init__.py  executor.py
tests/: test_indicators.py  test_market_state.py  test_normalize.py  test_signals_unit.py
