[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ok-assistance-trade-advice"
version = "1.0.0"
description = "Multi-timeframe OKX perpetual/spot signal engine with AI agent skill"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []   # stdlib only

[project.scripts]
ok-signal = "signal_engine:main"

[project.urls]
Homepage = "https://github.com/zeroxerCpp/ok-asssitance-trade-advice"
Repository = "https://github.com/zeroxerCpp/ok-asssitance-trade-advice"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
